css/pages/product.css
h1 {
  text-align: left;
}

/* price details */
.sale-price {
  color: var(--cta-orange);
}

.previous-price {
  text-decoration: line-through;
  text-decoration-thickness: 2px;
}

.save-price {
  background: var(--cta-orange);
  color: white;
}

.details-title {
  font-weight: 700;
}

.product-thumbnails {
  display: flex;
  gap: 5px;
}

.product-thumbnails > label {
  max-width: 100px;
}

.product-image-container label {
  border: 2px solid grey;
  cursor: pointer;
}

.product-image-container label:hover {
  border: 2px solid black;
}

input[type="radio"] {
  display: none;
}

input[type="radio"] ~ img {
  display: none;
}

input[type="radio"]:checked ~ img {
  display: block;
}

input[type="radio"]:checked + label {
  border: 2px solid black;
}

/*input styling*/

/*size selector*/
.size-selection input {
  display: none;
}

.size-selection label {
  border: 1px solid black;
  display: inline-block;
  width: 41px;
  text-align: center;
  padding: 11px 0px;
}

.size-selection input:checked + label {
  border: 3px solid black;
  width: 37px;
  padding: 9px 0px;
  font-weight: 700;
}

table {
  width: 100%;
}
td,
th {
  text-align: left;
  padding: 8px;
}

tr:nth-child(even) {
  background-color: #dddddd;
}

.select-size-error {
  color: red;
  margin: 0 0 15px 0;
}

.lightbox-background {
  position: fixed;
  z-index: 1000;
  padding-top: 100px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0, 30, 68, 0.7);
}

.lightbox-content {
  margin: auto;
  padding: 20px;
  width: fit-content;
  background-color: var(--light-blue);
  color: white;
  border: 2px solid white;
}

.lightbox-button-container {
  display: inline-flex;
  width: 100%;
}

.lightbox-button-container button {
  width: 120px;
  margin: 0 auto;
}

#quantity {
  width: 2rem;
  text-align: center;
  font-size: 1.125rem;
}

@media only screen and (min-width: 700px) {
  .product-page-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 50px;
  }
}

